5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1593_2425.log
== TEST (2019-03-26 10:28:54) 
-- CODE:
distancia=float(input());
combustivel=float(input());
total=distancia/combustuvel;

print(round(total,3),"km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total=distancia/combustuvel;
NameError: name 'combustuvel' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:29:34) 
-- CODE:
distancia=float(input());
combustivel=float(input());
total=distancia/combustivel;

print(round(total,3),"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:29:43) 
-- CODE:
distancia=float(input());
combustivel=float(input());
total=distancia/combustivel;

print(round(total,3),"km/l")
-- EXECUTION TIME:
0.13378
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
